# Possum Bot, possum photos Discord bot
# Copyright (C) 2023  Valentine Briese
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "possum-bot"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A bot for all your possum needs."
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.17.0"
shuttle-secrets = "0.17.0"
tokio = "1.28.2"
tracing = "0.1.37"
